crates/bevy_derive/compile_fail/tests/deref_mut_derive/invalid_item_fail.stderr
error: DerefMut cannot be derived on field-less structs
  --> tests/deref_mut_derive/invalid_item_fail.rs:LL:CC
   |
LL | #[derive(DerefMut)]
   |          ^^^^^^^^
   |
  = note: this error originates in the derive macro `DerefMut` (in Nightly builds, run with -Z macro-backtrace for more info)

error: DerefMut can only be derived on structs
  --> tests/deref_mut_derive/invalid_item_fail.rs:LL:CC
   |
LL | #[derive(DerefMut)]
   |          ^^^^^^^^
   |
  = note: this error originates in the derive macro `DerefMut` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors
